<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/green"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/Bienvenido_a"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_1_completo"
        app:srcCompat="@drawable/logo_2"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/text_como"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/text_ya_tengo"
        android:textAlignment="center"
        android:textColor="#221B1B"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_ingresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/Ingresar"
        android:textColor="#000000"
        android:onClick="abrirInicioSesion"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/text_aun_no"
        android:textAlignment="center"
        android:textColor="#221B1B"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button2_regis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/registrarme"
        android:textColor="#000000"
        android:onClick="ingresarARegistrarme"
        />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/text_o"
        android:textAlignment="center"
        android:textColor="#221B1B"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button3_ing_sin_r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/ing_sin_reg"
        android:textColor="#000000"
        android:onClick="volverAOpciones"/>
</LinearLayout>