<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txtConsultarPerDesapare"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/green"
    android:orientation="vertical"
    tools:context=".conector_ver_denuncia">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:contentDescription="@string/logo_2_w"
        app:srcCompat="@drawable/logo_1"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="17dp"
        android:text="@string/buscar_persona_pag"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/porfa_ingresa_documento"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txtNumerDocu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_margin="15dp"
        android:ems="10"
        android:hint="@string/tex_consultar_per_desap"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#33691E"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/green"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnConsultarPersona"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:onClick="clickIr"
            android:text="@string/boton_consultar_persona"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnCancelarConsultaPers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:onClick="cancelarBusqueda"
            android:text="@string/boton_cancelar_consulta"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>