<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:backgroundTint="@color/green"
    tools:context=".capa_iniciar_sesion">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:contentDescription="@string/logo_2_w"
        app:srcCompat="@drawable/logo_1"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/porfa_ingresa"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/usuarioInicSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_margin="15dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#33691E"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/contrasenaInicSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="15dp"
        android:ems="10"
        android:hint="@string/contrasena"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@android:color/primary_text_light"
        android:textColorHint="#004D40" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:backgroundTint="@color/green">


        <Button
            android:id="@+id/button4_ingresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:onClick="validarUsuario"
            android:text="@string/Ingresar"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button5_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:onClick="cancelarInicioSesion"
            android:text="@string/cancelar"
            android:textColor="@color/black" />
    </LinearLayout>
</LinearLayout>